# ChangeLog for gnome-base/libgnomecanvas
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-base/libgnomecanvas/ChangeLog,v 1.110 2008/05/08 03:28:13 dirtyepic Exp $

  08 May 2008; Ryan Hill <dirtyepic@gentoo.org>
  libgnomecanvas-2.20.1.1.ebuild:
  Keyword for mips.

  31 Mar 2008; <ricmm@gentoo.org> libgnomecanvas-2.14.0.ebuild:
  Drop to ~mips due to unstable deps

  29 Nov 2007; Jeroen Roovers <jer@gentoo.org>
  libgnomecanvas-2.20.1.1.ebuild:
  Stable for HPPA (bug #199740).

  26 Nov 2007; Markus Rothe <corsair@gentoo.org>
  libgnomecanvas-2.20.1.1.ebuild:
  Stable on ppc64; bug #199740

  24 Nov 2007; Brent Baude <ranger@gentoo.org>
  libgnomecanvas-2.20.1.1.ebuild:
  Marking libgnomecanvas-2.20.1.1 ppc stable for bug 199740

  22 Nov 2007; Raúl Porcel <armin76@gentoo.org>
  libgnomecanvas-2.20.1.1.ebuild:
  alpha/ia64/sparc stable wrt #199740

  21 Nov 2007; Dawid Węgliński <cla@gentoo.org>
  libgnomecanvas-2.20.1.1.ebuild:
  Stable on x86 (bug #199740)

  20 Nov 2007; Samuli Suominen <drac@gentoo.org>
  libgnomecanvas-2.20.1.1.ebuild:
  amd64 stable wrt #199740

  21 Oct 2007; Gilles Dartiguelongue <eva@gentoo.org>
  libgnomecanvas-2.20.0.ebuild, libgnomecanvas-2.20.1.ebuild,
  libgnomecanvas-2.20.1.1.ebuild:
  drop mips keyword until gail is keyworded

*libgnomecanvas-2.20.1.1 (21 Oct 2007)

  21 Oct 2007; Gilles Dartiguelongue <eva@gentoo.org>
  +libgnomecanvas-2.20.1.1.ebuild:
  bump to 2.20.1.1

*libgnomecanvas-2.20.1 (14 Oct 2007)

  14 Oct 2007; Gilles Dartiguelongue <eva@gentoo.org>
  +libgnomecanvas-2.20.1.ebuild:
  bump to 2.20.1

*libgnomecanvas-2.20.0 (01 Oct 2007)

  01 Oct 2007; Mart Raudsepp <leio@gentoo.org>
  +libgnomecanvas-2.20.0.ebuild:
  New series for Gnome 2.20 with GailCanvas moved to here from gail

  27 May 2007; Joshua Kinard <kumba@gentoo.org>
  libgnomecanvas-2.14.0.ebuild:
  Stable on mips.

  19 Mar 2007; Daniel Gryniewicz <dang@gentoo.org>