@@ -1,10 +1,6 @@
-DIST libgnomecanvas-2.14.0.tar.bz2 612330 RMD160 5d511f65c8860032e2b88bf11bd997920ba6ba7b SHA1 9a3fe0cfaa6361f67b3b5ba86324bf8edb8724a0 SHA256 5ceadd704327c2967868b3c0c81b5e600e1c6fd4f8efcbaaf89f9b18aa8bb5cf
-DIST libgnomecanvas-2.20.0.tar.bz2 583989 RMD160 4f79faa08220dcb788def836b9a1831d02bdf8f0 SHA1 1afd7ef7636373f60d6ac7c7eec9cd6fd8ec0326 SHA256 c1d7301ecea3719e307182222ba19375b74017580d58e4a25f4ae15c8c8f9c3f
 DIST libgnomecanvas-2.20.1.1.tar.bz2 583565 RMD160 fe5333c31f385313b2e90deb9710275d61bbc15b SHA1 302a4762b658244828ad1c9f291ffb972b8274c9 SHA256 70f906d52d98b7b45e95fd59ef10f06579b75ee9e70e67edabd30a4f6e5d6fe3
-DIST libgnomecanvas-2.20.1.tar.bz2 583613 RMD160 a17a5c71ef30b831defb811e810d0351962c18c7 SHA1 c375c045b22a5e5675f60f2ba17b76308249af27 SHA256 cf5997f2fefabc7edb77bee88c58b22442de91612f117d792d56aac91b447733
-EBUILD libgnomecanvas-2.14.0.ebuild 714 RMD160 631d489d48c11ab7b03d9ed17c34b7d68ec255d3 SHA1 f147acb7938841d0ee55b62cd5d03d9c0bc543b7 SHA256 32b4956d063142805aff1a8aefd713a90f8ec8fa371100edef27b3d8352ef17b
-EBUILD libgnomecanvas-2.20.0.ebuild 889 RMD160 0ac4ffcb3012418786625f746f39ca3e7cad2263 SHA1 4e9fafa8268747f94ed1fa08a949d84e7343b989 SHA256 6ad0e3e0bbc3b15900c557dcbd731786158412e30ce919877ba864fdcbcb0f19
+DIST libgnomecanvas-2.26.0.tar.bz2 600470 RMD160 87eb8f61b4ed8c3c3ede4941aeb8b539731d1d9f SHA1 d0429140c3ae8974562f4eb34e89d4f512e8e4ec SHA256 80b480acc33d7303f651e9c5bc8fea51c9e9a9ed59ebfdbbb730dd798bcbc58d
 EBUILD libgnomecanvas-2.20.1.1.ebuild 1027 RMD160 41af04ae8fc6a55234be3d70a0be4b0c068e749c SHA1 a06eae83877ea80c14935e8338f06b9622ed29d9 SHA256 4ca99ad0f230bda3e3528ad2ee3acb2458af2a24ea656a08f9d468578f3e2d9f
-EBUILD libgnomecanvas-2.20.1.ebuild 889 RMD160 c0530684ee38c95152d2bb0d3c9bae45894ce1eb SHA1 39a6801e059dd9780482143eec17d56fc0e4627e SHA256 25cbcb657aa7224c077e9165717b3dc8b837eed54fe56e2b60313d4c0120eb0d
-MISC ChangeLog 12962 RMD160 5fd04a23cd9d488497841f7f3f7e4f8b4eae356b SHA1 9a24a377122a2970e57ae8785cbec51f25370907 SHA256 fbf93b311afd71b5b269ba271624afead711bd34b5488be420c7b9f2f4806ccd
+EBUILD libgnomecanvas-2.26.0.ebuild 923 RMD160 c4e32cd105f7bd84dc1d0f080f865d36dd2498da SHA1 d9c2a57612e8758eacdffccd8eb17359e6ae1a25 SHA256 7ddbd49cef75e984ca3fb36ead8eb841edd73f65a266da30d0c644ed4b47aca2
+MISC ChangeLog 13195 RMD160 e60deefaa458489bad53213f396acc685b81fd2d SHA1 a89348751d13e9ef8499b710359c78f67e88870c SHA256 cb58cfda0d81cfc81eb697efed671ee630a7d8eda9343ec49e20e0b88285ac08
 MISC metadata.xml 158 RMD160 c0e2bae8e91bb6be8922bac5e4f597302e06587e SHA1 38f78e9790bcd4382b4a49aa226aa6dda1d3a3d7 SHA256 3a7dbca0fdc557de69783e0663e2d76ddab129ea8a19b2d0ef6d3e5d1b947ce1
