@@ -1,6 +1,13 @@
 # ChangeLog for gnome-base/libgnomecanvas
-# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/libgnomecanvas/ChangeLog,v 1.110 2008/05/08 03:28:13 dirtyepic Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/libgnomecanvas/ChangeLog,v 1.111 2009/05/10 18:39:15 eva Exp $
+
+*libgnomecanvas-2.26.0 (10 May 2009)
+
+  10 May 2009; Gilles Dartiguelongue <eva@gentoo.org>
+  -libgnomecanvas-2.14.0.ebuild, +libgnomecanvas-2.26.0.ebuild:
+  New version for GNOME 2.26. Nothing major, bug fixes and translation
+  updates.
 
   08 May 2008; Ryan Hill <dirtyepic@gentoo.org>
   libgnomecanvas-2.20.1.1.ebuild:
